// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button default 1`] = `
Array [
  <div
    id="story-root"
    style={Object {}}
  >
    <button>
      Active
    </button>
  </div>,
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              No
                            </span>
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            Display
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            Name
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  default

                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;/
                            </span>
                            <span
                              className="token class-name"
                            >
                              No
                            </span>
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            Display
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            Name
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Prop Types
      </h1>
      <div>
        <h3
          style={
            Object {
              "margin": "20px 0 0 0",
            }
          }
        >
          "
          Unknown
          " Component
        </h3>
        <small>
          No propTypes defined!
        </small>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Atoms/Button with Disable 1`] = `
Array [
  <div
    id="story-root"
    style={Object {}}
  >
    <button>
      unActive
    </button>
  </div>,
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              No
                            </span>
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            Display
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            Name
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            disable
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  default

                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;/
                            </span>
                            <span
                              className="token class-name"
                            >
                              No
                            </span>
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            Display
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            Name
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Prop Types
      </h1>
      <div>
        <h3
          style={
            Object {
              "margin": "20px 0 0 0",
            }
          }
        >
          "
          Unknown
          " Component
        </h3>
        <small>
          No propTypes defined!
        </small>
      </div>
    </div>
  </div>,
]
`;
